@startuml
'https://plantuml.com/class-diagram

abstract class Figure{
- String color
    - int [][] definition
    - ArrayList<Pixel> pixels
    - int posX
    - int posY
+ Figure(String,int,int)
+ void draw()
+ int getPosX()
+ int setPosX(int)
+ int getPosY()
+ int setPosY(int)
+ Color getColor()
+ int[][] getDefinition()
+ void assignPixels(int, int)
 + void reAssignPixels(int, int)
 + ArrayList<Pixel> getPixels()
 + void changeDefinition(int [][])
+ void rotate()
+ boolean canIMoveY(int [][])
+ boolean canIMoveX(int [][],int)



}
class Square{
-int [][] newDefinition=new int[][]
- Color squareColor
+ Square(int,int)

}
class Straigth{
-int [][] newDefinition=new int[][]
- Color straigthColor
+ Straigth(int,int)
}
class Sshape{
-int [][] newDefinition=new int[][]
- Color sShapeColor
+ Sshape(int,int)
}
class Zshape{
-int [][] newDefinition=new int[][]
- Color zShapeColor
+ Zshape(int,int)

}
class Tshape{
-int [][] newDefinition=new int[][]
- Color tShapeColor
+ Tshape(int,int)

}
class Lshape{
-int [][] newDefinition=new int[][]
- Color lShapeColor
+ Lshape(int,int)


}
class Jshape{
-int [][] newDefinition=new int[][]
- Color jShapeColor
+ Jshape(int,int)
}
class GamePanel{
- int[][] panelStatus = new int[][]
    - final int gamePanelWidth
    - final int gamePanelHeight
    - final int cellWidth
    - final int cellHeight
     - JPanel gamePanel
 + GamePanel()
+ JPanel getGamePanel()
+ int[][] getPanelStatus()
+ void paintPanel(int,int,Color)


}
class Pixel{
- int posX;
    - int posY;
    - Color color;
    - JPanel pixel;
    + void setPosX(int)
    + void setPosY(int posY)
    + int getPosX()
    + int getPosY()
    + Color getColor()
    + JPanel getPixel()
    + Pixel(int,int,Color)


}
class InitialFrame{
 - JFrame frame
 + InitialFrame()
  + JFrame getFrame()

}
class Game{
    - int speed
    - int scoreMark
    + Game()
+ static Figure generateFigure()
+ static int getRandomX()
+ static void newFigure(GamePanel,Stack<Figure>)
}
class Score{
    - int score
    - int linesCleared
    - JPanel scorePanel
    + Score()
    + void updateScore(int)
    + int getScore()
    + JPanel getScorePanel()
}
Figure <|-- Straigth
Figure <|-- Square
Figure <|-- Sshape
Figure <|-- Zshape
Figure <|-- Tshape
Figure <|-- Lshape
Figure <|-- Jshape

Figure --* Pixel

GamePanel *-- Game
InitialFrame *-- Game
Figure *-- Game
Score *-- Game


@enduml